# ocha-svn

pyocha/: catalog.py  catalog_test.py  conf.py  fill_catalog.py  pyocha.glade  testutils.py  ui.py
pyocha_mt/: catalog.py  fill_catalog.py  pyocha.glade  ui.py
trunk/: Makefile.am  README  autogen.sh  bootstrap  cleanup.sh  configure  configure.in  run-desktop-entry
trunk/data/: Makefile.am  ocha.applications  ocha.desktop
trunk/doc/: Makefile.am  manpages.xml  ochad.xml
trunk/doc/C/: Makefile.am  ocha-manual.xml
trunk/doc/devel/: developers.html
trunk/docs/: Makefile.am  manual.xml  ocha-manual.omf  ocha-manual.xml  ocha.xml  ochad.xml  xmldocs.make
trunk/scripts/: cleanup.sh
trunk/src/: Doxyfile  Makefile.am  TODO  accel_button.c  accel_button.h  catalog.c  catalog.h  catalog_check.c  catalog_index.c  catalog_index.h  catalog_index_check.c  catalog_queryrunner.c  catalog_queryrunner.h  catalog_queryrunner_check.c  catalog_result.c  catalog_result.h  catalog_updatedb.h  compound_queryrunner.c  compound_queryrunner.h  content_view.c  content_view.h  contentlist.c  contentlist.h  contentlist_check.c  desktop_file.c  desktop_file.h  first_time.c  first_time.h  hello.c  indexer.c  indexer.h  indexer_applications.c  indexer_applications.h  indexer_files.c  indexer_files.h  indexer_files_check.c  indexer_files_view.c  indexer_files_view.h  indexer_main.c  indexer_mozilla.c  (+88 more)
trunk/src/catalog/: Makefile.am
trunk/src/catalog/updatedb/: locate.c  locate.h  locate_check.c  updatedb.h  updatedb_check.c
trunk/src/test_data/: bookmarks.html  bookmarks_with_space.html  digikam.desktop  xman-hidden.desktop  xman.desktop  xmms.desktop  xpdf.desktop
versions/1st-try/: AUTHORS  ChangeLog  README
versions/1st-try/src/: Makefile.am  mempool.c  target.c
versions/1st-try/src/catalog/updatedb/: Makefile.am  locate.c  locate.h  updatedb.h
versions/pyocha/: catalog.py  catalog_test.py  fill_catalog.py  ui.py
versions/pyocha_mt/: Makefile  pyocha.gladep
