dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/result.h)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(ocha, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Checks for libraries.
AM_PATH_CHECK()
AM_PATH_GLIB_2_0(2.6, , exit 10, "gthread")
AM_PATH_GTK_2_0(2.6, , exit 10)
PKG_CHECK_MODULES(SQLITE, sqlite, ,exit 10)
PKG_CHECK_MODULES(LIBGNOME, libgnomeui-2.0, ,exit 10)
PKG_CHECK_MODULES(GNOME_VFS, gnome-vfs-module-2.0, ,exit 10)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h string.h fcntl.h stdlib.h stdio.h stdbool.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Configuration
CFLAGS="-g -std=c99 $GLIB_CFLAGS -O -D_REENTRANT -D_POSIX_SOURCE -D_ISOC99_SOURCE"
LIBS="$GLIB_LIBS $LIBS"

SQLITE_CFLAGS="$SQLITE_CFLAGS"
SQLITE_LIBS="$SQLITE_LIBS"
GNOME_CFLAGS="$GNOME_VFS_CFLAGS $LIBGNOME_CFLAGS"
GNOME_LIBS="$GNOME_VFS_LIBS $LIBGNOME_LIBS"
TEST_CFLAGS="$GTK_CFLAGS -g $CHECK_CFLAGS"
TEST_LIBS="$CHECK_LIBS $GTK_LIBS"
AC_SUBST([TEST_CFLAGS])
AC_SUBST([TEST_LIBS])
AC_SUBST([SQLITE_CFLAGS])
AC_SUBST([SQLITE_LIBS])
AC_SUBST([GNOME_CFLAGS])
AC_SUBST([GNOME_LIBS])


dnl Output
AC_OUTPUT( Makefile src/Makefile  )
